Made adjustments to the toggle navigation to resolve body scroll on mobile.

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ li {
 
 .sidebar {
     position: fixed;
-    top: 2.4em;
+    top: 0;
     height: 0px;
     width: 100vw;
     background-color: var(--bg-color);
@@ -237,8 +237,9 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2em;
+    gap: 1.8em;
     opacity: 0;
+    height: 80%;
 }
 
 .fade-in {
@@ -318,7 +319,9 @@ li {
 }
 
 .no-scroll {
+    height: 100vh;
     overflow-y: hidden;
+    padding-right: 15px;
 }
 
 .modal-open {
